...
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="show_bleeding">Show Bleeding</string>
    <string name="search">Search</string>
    <string name="add_note">Add Note...</string>
    <string name="please_select_a_date">Please select a date...</string>
    <string name="pick_date">You must pick a date!</string>
    <string name="saved">Saved!</string>


    // Array of emotions values
    <string-array name="emotions_array">
        <item>Happy</item>
        <item>Content</item>
...
