<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />


    <item
        android:id="@+id/action_calendar"
        android:title="@string/calendar"
        android:icon="@drawable/ic_round_calendar_white"
        app:showAsAction="ifRoom"
        />

</menu>